crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__imports_and_functions.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: 
                from std.math import sqrt
                from std.io import print as output

                struct Point {
                    x: felt,
                    y: felt
                }

                func distance(p1: Point, p2: Point) -> felt {
                    local dx: felt = p1.x - p2.x;
                    local dy: felt = p1.y - p2.y;
                    return sqrt(dx * dx + dy * dy);
                }
            
result: [
    Import(
        Spanned(
            ImportStmt {
                path: [
                    Spanned(
                        "std",
                        22..25,
                    ),
                    Spanned(
                        "math",
                        26..30,
                    ),
                ],
                item: Spanned(
                    "sqrt",
                    38..42,
                ),
                alias: None,
            },
            17..42,
        ),
    ),
    Import(
        Spanned(
            ImportStmt {
                path: [
                    Spanned(
                        "std",
                        64..67,
                    ),
                    Spanned(
                        "io",
                        68..70,
                    ),
                ],
                item: Spanned(
                    "print",
                    78..83,
                ),
                alias: Some(
                    Spanned(
                        "output",
                        87..93,
                    ),
                ),
            },
            59..93,
        ),
    ),
    Struct(
        Spanned(
            StructDef {
                name: Spanned(
                    "Point",
                    118..123,
                ),
                fields: [
                    (
                        Spanned(
                            "x",
                            146..147,
                        ),
                        Named(
                            "felt",
                        ),
                    ),
                    (
                        Spanned(
                            "y",
                            175..176,
                        ),
                        Named(
                            "felt",
                        ),
                    ),
                ],
            },
            111..200,
        ),
    ),
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "distance",
                    223..231,
                ),
                params: [
                    Parameter {
                        name: Spanned(
                            "p1",
                            232..234,
                        ),
                        type_expr: Named(
                            "Point",
                        ),
                    },
                    Parameter {
                        name: Spanned(
                            "p2",
                            243..245,
                        ),
                        type_expr: Named(
                            "Point",
                        ),
                    },
                ],
                return_type: Some(
                    Named(
                        "felt",
                    ),
                ),
                body: [
                    Spanned(
                        Local {
                            name: Spanned(
                                "dx",
                                290..292,
                            ),
                            ty: Some(
                                Named(
                                    "felt",
                                ),
                            ),
                            value: Spanned(
                                BinaryOp {
                                    op: Sub,
                                    left: Spanned(
                                        MemberAccess {
                                            object: Spanned(
                                                Identifier(
                                                    Spanned(
                                                        "p1",
                                                        301..303,
                                                    ),
                                                ),
                                                301..303,
                                            ),
                                            field: Spanned(
                                                "x",
                                                304..305,
                                            ),
                                        },
                                        301..305,
                                    ),
                                    right: Spanned(
                                        MemberAccess {
                                            object: Spanned(
                                                Identifier(
                                                    Spanned(
                                                        "p2",
                                                        308..310,
                                                    ),
                                                ),
                                                308..310,
                                            ),
                                            field: Spanned(
                                                "x",
                                                311..312,
                                            ),
                                        },
                                        308..312,
                                    ),
                                },
                                301..312,
                            ),
                        },
                        284..313,
                    ),
                    Spanned(
                        Local {
                            name: Spanned(
                                "dy",
                                340..342,
                            ),
                            ty: Some(
                                Named(
                                    "felt",
                                ),
                            ),
                            value: Spanned(
                                BinaryOp {
                                    op: Sub,
                                    left: Spanned(
                                        MemberAccess {
                                            object: Spanned(
                                                Identifier(
                                                    Spanned(
                                                        "p1",
                                                        351..353,
                                                    ),
                                                ),
                                                351..353,
                                            ),
                                            field: Spanned(
                                                "y",
                                                354..355,
                                            ),
                                        },
                                        351..355,
                                    ),
                                    right: Spanned(
                                        MemberAccess {
                                            object: Spanned(
                                                Identifier(
                                                    Spanned(
                                                        "p2",
                                                        358..360,
                                                    ),
                                                ),
                                                358..360,
                                            ),
                                            field: Spanned(
                                                "y",
                                                361..362,
                                            ),
                                        },
                                        358..362,
                                    ),
                                },
                                351..362,
                            ),
                        },
                        334..363,
                    ),
                    Spanned(
                        Return {
                            value: Some(
                                Spanned(
                                    FunctionCall {
                                        callee: Spanned(
                                            Identifier(
                                                Spanned(
                                                    "sqrt",
                                                    391..395,
                                                ),
                                            ),
                                            391..395,
                                        ),
                                        args: [
                                            Spanned(
                                                BinaryOp {
                                                    op: Add,
                                                    left: Spanned(
                                                        BinaryOp {
                                                            op: Mul,
                                                            left: Spanned(
                                                                Identifier(
                                                                    Spanned(
                                                                        "dx",
                                                                        396..398,
                                                                    ),
                                                                ),
                                                                396..398,
                                                            ),
                                                            right: Spanned(
                                                                Identifier(
                                                                    Spanned(
                                                                        "dx",
                                                                        401..403,
                                                                    ),
                                                                ),
                                                                401..403,
                                                            ),
                                                        },
                                                        396..403,
                                                    ),
                                                    right: Spanned(
                                                        BinaryOp {
                                                            op: Mul,
                                                            left: Spanned(
                                                                Identifier(
                                                                    Spanned(
                                                                        "dy",
                                                                        406..408,
                                                                    ),
                                                                ),
                                                                406..408,
                                                            ),
                                                            right: Spanned(
                                                                Identifier(
                                                                    Spanned(
                                                                        "dy",
                                                                        411..413,
                                                                    ),
                                                                ),
                                                                411..413,
                                                            ),
                                                        },
                                                        406..413,
                                                    ),
                                                },
                                                396..413,
                                            ),
                                        ],
                                    },
                                    391..413,
                                ),
                            ),
                        },
                        384..415,
                    ),
                ],
            },
            218..433,
        ),
    ),
]
