crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__invalid_toplevel_if_diagnostic.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entries
---
code: if (true) { x = 1; }
result: [02] Error: found 'if' expected 'func', 'struct', 'from', 'const', 'namespace', or end of input
   ╭─[ <unknown>:1:1 ]
   │
 1 │ if (true) { x = 1; }
   │ ─┬  
   │  ╰── found 'if' expected 'func', 'struct', 'from', 'const', 'namespace', or end of input
───╯
