crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__invalid_toplevel_let_diagnostic.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entries
---
code: let x = 5;
result: [02] Error: found 'let' expected 'func', 'struct', 'from', 'const', 'namespace', or end of input
   ╭─[ <unknown>:1:1 ]
   │
 1 │ let x = 5;
   │ ─┬─  
   │  ╰─── found 'let' expected 'func', 'struct', 'from', 'const', 'namespace', or end of input
───╯
