crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__invalid_toplevel_local_diagnostic.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entries
---
code: local x: felt = 42;
result: [03] Error: found 'local' expected 'func', 'struct', 'from', 'const', 'namespace', or end of input
   ╭─[ <unknown>:1:1 ]
   │
 1 │ local x: felt = 42;
   │ ──┬──  
   │   ╰──── found 'local' expected 'func', 'struct', 'from', 'const', 'namespace', or end of input
───╯
