crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__invalid_toplevel_return_diagnostic.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entries
---
code: return 5;
result: [02] Error: found 'return' expected 'func', 'struct', 'from', 'const', 'namespace', or end of input
   ╭─[ invalid_toplevel_return:1:1 ]
   │
 1 │ return 5;
   │ ───┬──  
   │    ╰──── found 'return' expected 'func', 'struct', 'from', 'const', 'namespace', or end of input
───╯
