crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__large_number_diagnostic.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entries
---
code: func test() { 4294967295; }
result: [03] Error: Invalid number '4294967295': Number overflows 2**31 - 1
   ╭─[ <unknown>:1:15 ]
   │
 1 │ func test() { 4294967295; }
   │               ─────┬────  
   │                    ╰────── Invalid number '4294967295': Number overflows 2**31 - 1
───╯
