crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__lexer_error_integration_diagnostic.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entries
---
code: func test() { let x = 0x80000000; }
result: [01] Error: Invalid number '0x80000000': Number overflows 2**31 - 1
   ╭─[ lexer_error_integration:1:23 ]
   │
 1 │ func test() { let x = 0x80000000; }
   │                       ─────┬────  
   │                            ╰────── Invalid number '0x80000000': Number overflows 2**31 - 1
───╯
