crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__missing_assignment_target_diagnostic.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entries
---
code: func test() { = 5; }
result: [03] Error: found '=' expected '{', 'if', 'let', 'local', 'const', 'return', something else, identifier, '(', or '}'
   ╭─[ <unknown>:1:15 ]
   │
 1 │ func test() { = 5; }
   │               ┬  
   │               ╰── found '=' expected '{', 'if', 'let', 'local', 'const', 'return', something else, identifier, '(', or '}'
───╯
