crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__missing_function_body_diagnostic.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entries
---
code: func test() -> felt
result: [03] Error: found end of input expected '*', or '{'
   ╭─[ <unknown>:1:20 ]
   │
 1 │ func test() -> felt
   │                    │ 
   │                    ╰─ found end of input expected '*', or '{'
───╯
